bug fixes and refinements including: positioning of dorling labels; visibility (or invisibility) of dorling labels on map and scatterplot; added close x on citystats; fixed console error for timeline values being NaN before data loaded; cleaned up vestiges of code from split in dorling circle and dorling label; fixed scatterplot field visibility bug

--- a/scss/components/cityStatsComponent.scss
+++ b/scss/components/cityStatsComponent.scss
@@ -3,6 +3,23 @@
     text-transform: uppercase;
   }
 
+  .closeicon {
+      margin-left: -30px;
+      margin-top: -2px;
+      float: right;
+      width: 30px;
+      height: 26px;
+      display: inline-block;
+      background-repeat: no-repeat;
+      opacity: 0.4;
+      cursor: pointer;
+      font-size: 1.5em;
+  }
+
+  .closeicon:hover {
+      opacity: 1.0;
+  }
+
   .summary {
     text-align: center;
     font-size: 1.3em;
@@ -42,4 +59,6 @@
 
 
   }
+
+
 }
